<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/dialog_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/coordinates_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/success_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_success_detail"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/coordinates_text"/>
        <EditText
            android:id="@+id/sms_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:focusable="true"
            android:layout_below="@+id/success_details"/>
        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sms_phone_no">
            <Button
                android:id="@+id/success_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sms_success_cancel_button"
                android:background="@android:color/transparent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary_dark_material_light"/>
            <Button
                android:id="@+id/success_send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toEndOf="@+id/success_cancel_btn"
                android:text="@string/sms_success_send_button"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/dialog_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="5dp">
        <TextView
            android:id="@+id/fail_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sms_fail_detail"/>
        <Button
            android:id="@+id/fail_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fail_details"
            android:layout_marginTop="10dp"
            android:text="@string/sms_fail_ok_button"/>
    </RelativeLayout>


</RelativeLayout>