<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:id="@+id/btn_getLocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_get_location_button"/>

        <Button
            android:id="@+id/btn_sendMsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_send_message_button"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/loading_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/loading_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_loading_location_text"
            android:gravity="center_vertical"/>
    </LinearLayout>

</RelativeLayout>
